tout et bien relier

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Ryan Almansa</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="../style/styles.css" rel="stylesheet" />
 </head>
 
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">Ryan Almansa</a>
+        <a class="navbar-brand" href="../index.html">Ryan Almansa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">accueil</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">accueil</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
@@ -38,20 +38,20 @@
         <div class="content">
             <div class="left-colonne">
                 <h2>Contact</h2>
-                <p>Phone: 07 68 60 06 87</p>
-                <p>Email: <a href="mailto:ryan.almansa@gmail.com">ryan.almansa@gmail.com</a></p>
-                <p>Address: 18 Rue de Grossenenglis, Noailles</p>
+                <p>Tél : 07 68 60 06 87</p>
+                <p>Email : <a href="mailto:ryan.almansa@gmail.com">ryan.almansa@gmail.com</a></p>
+                <p>Address : 18 rue de Grossenenglis, Noailles</p>
 
-                <h2>Education</h2>
+                <h2>Training</h2>
                 <ul>
-                    <li>SNU (Universal National Service)</li>
-                    <li>Technical School Certificate</li>
+                    <li>SNU (Service national universel)</li>
+                    <li>technical school certificate</li>
                     <li>STI2D Technological Baccalaureate</li>
                 </ul>
 
-                <h2>Languages</h2>
-                <p>English: Intermediate level (B1)</p>
-                <p>Spanish: Intermediate level (B1)</p>
+                <h2>Langues</h2>
+                <p>English: Fair level (B1)</p>
+                <p>Spanish: Correct level (B1)</p>
 
                 <h2>Interests</h2>
                 <ul>
@@ -82,14 +82,15 @@
                 </ul>
 
                 <h2>Professional Experience</h2>
-                <p>Practical internship at Taxi G7 automotive company</p>
+                <p>Practical internship in the automotive company Taxi G7</p>
 
-                <h2>Technical Skills</h2>
+                <h2>Acquired Skills</h2>
                 <ul>
-                    <li>Web development languages: HTML5, CSS3</li>
+                    <li>Web development language proficiency: HTML5, CSS3</li>
                 </ul>
             </div>
         </div>
     </div>
 </body>
+</html>
 </html>
