--- a/index.html
+++ b/index.html
@@ -11,25 +11,24 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-        <link href="stylesheet" rel="styles.css">
+        <link href="style/styles.css" rel="stylesheet"/>
 
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Ryan Almansa</a>
+                <a class="navbar-brand" href="/index.html">Ryan Almansa</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">accueil</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">plus</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="">accueil</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/lanceur.html">Lanceur</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/equipement.html">Equipement</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/equipe.html">Equipe</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/plus.html">plus</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">#</a></li>            
                        </ul>                    
                 </div>
