page de plus fini + debug

--- a/pages/lanceur.html
+++ b/pages/lanceur.html
@@ -120,7 +120,7 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Gregory</h5>
-                                    des face à face toujours plus fou 
+                                    <p>Shoker AMP</p> 
                                 </div>
                             </div>
                             <!-- Product actions-->
