--- a/pages/plus.html
+++ b/pages/plus.html
@@ -12,7 +12,8 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html">Ryan Almansa</a>            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand" href="../index.html">Ryan Almansa</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">accueil</a></li>
@@ -30,7 +31,7 @@
     <section class="hero">
         <h2>Hurican</h2>
         <p>Une equipe hors du commun avec des as de la cachette!</p>
-        <a href="index.html" class="cta-button">Retour à l'aceuil</a>
+        <a href="../index.html" class="cta-button">Retour à l'aceuil</a>
     
     
         <h3>Présentation de notre Équipe de Paintball</h3>
