--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="">accueil</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="">Accueil</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/lanceur.html">Lanceur</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/equipement.html">Equipement</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/equipe.html">Equipe</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/plus.html">plus</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/parck.html">Parck</a></li>            
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/plus.html">Plus</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/parck.html">Parc</a></li>            
                        </ul>                    
                 </div>
             </div>
@@ -38,8 +38,8 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Un univers parallel </h1>
-                    <p class="lead fw-normal text-white-50 mb-0">De la crainte à distraction</p>
+                    <h1 class="display-4 fw-bolder">Un univers parallèle </h1>
+                    <p class="lead fw-normal text-white-50 mb-0">De la crainte à la distraction</p>
                 </div>
             </div>
         </header>
@@ -56,12 +56,12 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">sortie nº1</h5>                             
-                                    <h8>comencement</h8> 
+                                    <h8>Commencement</h8> 
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -102,15 +102,15 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Nouveaux arrivant</h5>
+                                    <h5 class="fw-bolder">Nouveaux arrivants</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through"><h5>seul</h5></span>
-                                    <p>avec ses potes</p>
+                                    <p>Avec ses potes</p>
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -151,12 +151,12 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Marque de joie</h5>
-                                    des face à face toujours plus fou 
+                                    des faces à face toujours plus fous 
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -168,14 +168,14 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">La poise tirer à son avantage  </h5>
+                                    <h5 class="fw-bolder">La poisse tirée à son avantage  </h5>
                                     <!-- Product price-->
                                     Journée phare
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Special teams</h5>
+                                    <h5 class="fw-bolder">Spéciale teams</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
@@ -203,13 +203,13 @@
                                         <div class="bi-star-fill"></div>
                                     </div>
                                     <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">pas mal</span>
-                                    <p>La meilleur</p>
+                                    <span class="text-muted text-decoration-line-through">Pas mal</span>
+                                    <p>La meilleure</p>
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Le trio Legendaire</h5>
+                                    <h5 class="fw-bolder">Le trio Légendaire</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
@@ -237,7 +237,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Ryan Almansa Website 2024</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Ryan Almansa - Website 2024</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
