--- a/pages/equipement.html
+++ b/pages/equipement.html
@@ -14,14 +14,14 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">accueil</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">plus</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parck</a></li>            
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
                        </ul>                    
                 </div>
             </div>
@@ -39,7 +39,7 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Lanceur de Paintball</h5>                             
-                                     <p>lanceur semi-auto ou électronique</p>
+                                     <p>Lanceur semi-auto ou électronique</p>
                                      <p>Bouteille d'air comprimé </p>
                                      <p>Loader (chargeur de billes)</p>
                                 </div>
@@ -83,7 +83,7 @@
                                     <p>Masque (Protection du visage)</p>
                                     <p>Gants renforcés</p>
                                     <p>Protège-cou</p>
-                                    <p> plastron corp et dos</p>
+                                    <p> Plastron corps et dos</p>
                                 
                                 </div>
                             </div>
@@ -101,7 +101,7 @@
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Vêtements Adaptés</h5>
                                     <p>Vêtements résistants aux impacts</p>
-                                    <p>Bandeau pour protéger le haut du crane</p>
+                                    <p>Bandeau pour protéger le haut du crâne</p>
                                     <p>Chaussures adaptées au terrain</p>
                                 </div>
                             </div>
@@ -146,7 +146,7 @@
         </section>
 
                 <footer class="py-5 bg-dark">
-                    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Ryan Almansa Website 2024</p></div>
+                    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Ryan Almansa - Website 2024</p></div>
                 </footer>
                 
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
