--- a/pages/lanceur.html
+++ b/pages/lanceur.html
@@ -16,14 +16,14 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">accueil</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">plus</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parck</a></li>            
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
                    </ul>                    
             </div>
         </div>
@@ -46,7 +46,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintball-veckring.fr/boutique/lanceur-dye-2516.html">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintball-veckring.fr/boutique/lanceur-dye-2516.html">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="=https://armurerie-billau.be/products/lanceur-tippmann-a5-canon-lapco-cal-68">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="=https://armurerie-billau.be/products/lanceur-tippmann-a5-canon-lapco-cal-68">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.lonewolfpaintball.com/products/sp-shocker-xls">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.lonewolfpaintball.com/products/sp-shocker-xls">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintballgarage.com/lanceurs-sp-shocker-shocker-amp-xsl-427_430_431_535.html">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintballgarage.com/lanceurs-sp-shocker-shocker-amp-xsl-427_430_431_535.html">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -118,13 +118,13 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Gregory</h5>
+                                    <h5 class="fw-bolder">Grégory</h5>
                                     <p>Shoker AMP</p> 
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintballgarage.com/lanceurs-sp-shocker-shocker-amp-xsl-427_430_431_535.html">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintballgarage.com/lanceurs-sp-shocker-shocker-amp-xsl-427_430_431_535.html">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintballgarage.com/paintballgaragelanceurdoccasionsmartpartsnervebleubrillant-xml-588_444-2369.html">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintballgarage.com/paintballgaragelanceurdoccasionsmartpartsnervebleubrillant-xml-588_444-2369.html">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintball-connexion.com/lanceurs-electro-pneumatiques/13037-lanceur-shocker-era-gog-cal68.html#/couleur-noir">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintball-connexion.com/lanceurs-electro-pneumatiques/13037-lanceur-shocker-era-gog-cal68.html#/couleur-noir">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.lonewolfpaintball.com/products/sp-shocker-xls">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.lonewolfpaintball.com/products/sp-shocker-xls">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Ryan Almansa Website 2024</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Ryan Almansa - Website 2024</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
