--- a/pages/parck.html
+++ b/pages/parck.html
@@ -16,14 +16,14 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">accueil</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">plus</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parck</a></li>            
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
                 </ul>                    
             </div>
         </div>
@@ -38,7 +38,7 @@
                    <img src="https://imgur.com/tsRqrRD.jpg"> 
                    <img src="https://imgur.com/T4h0KvT.jpg">
                    <img src="https://imgur.com/YgT29qz.jpg">
-                   <p>Pas d'inquiétude, les images seront bientôt de retour  apres se passage !</p>
+                   <p>Pas d'inquiétude, les images seront bientôt de retour  après ce passage !</p>
                 </a>
             </div>
         </div>
