--- a/pages/plus.html
+++ b/pages/plus.html
@@ -14,14 +14,14 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">accueil</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">plus</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parck</a></li>            
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
                 </ul>                    
             </div>
         </div>
@@ -116,7 +116,7 @@
         </div>
     </body>
     <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Ryan Almansa Website 2024</p></div>
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Ryan Almansa - Website 2024</p></div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
