--- a/pages/equipement.html
+++ b/pages/equipement.html
@@ -10,7 +10,7 @@
             <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="../index.html">Ryan Almansa</a>
+                <a class="navbar-brand" href="../index.html"><img src="https://imgur.com/CYgKVa2.jpg"><a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -133,7 +133,7 @@
                             <img class="card-img-top" src="https://imgur.com/yPeNHSD.jpg" alt="fumi et petard" />
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Équipement Supplémentaire</h5>
+                                    <h5 class="fw-bolder">Autour du terrain</h5>
                                     <p>Caméra d’action (pour filmer les parties)</p>
                                     <p>fumigènes ou grenades de paintball</p>
                                 </div>
