--- a/pages/lanceur.html
+++ b/pages/lanceur.html
@@ -12,8 +12,8 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html">Ryan Almansa</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand" href="../index.html"><img src="https://imgur.com/CYgKVa2.jpg"><a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
@@ -68,7 +68,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="=https://armurerie-billau.be/products/lanceur-tippmann-a5-canon-lapco-cal-68">Voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintball-veckring.fr/boutique/lanceur-tippmann-1836.html">Voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
