--- a/pages/cvEn.html
+++ b/pages/cvEn.html
@@ -38,9 +38,9 @@
         <div class="content">
             <div class="left-colonne">
                 <h2>Contact</h2>
-                <p>Phone: 07 68 60 06 87</p>
-                <p>Email: <a href="mailto:ryan.almansa@gmail.com">ryan.almansa@gmail.com</a></p>
-                <p>Address: 18 Rue de Grossenenglis, Noailles</p>
+                <p>Phone: 07 68 60 87 98</p>
+                <p>Email: <a href="mailto:piro.piro@gmail.com">piro.piro@gmail.com</a></p>
+                <p>Address: 5 Rue de Noailles, 60370 Hermes</p>
 
                 <h2>Education</h2>
                 <ul>
