--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                         
                                         
                                     </div>
-                                    <p>des jeux rapide et efficace</p>
+                                    <p>des jeux rapides</p>
                                 </div>
                             </div>
                             <!-- Product actions-->
