--- a/pages/plus.html
+++ b/pages/plus.html
@@ -95,8 +95,8 @@
             <h2>Liam "La Verrue"</h2>
             <p>Liam, affectueusement surnommé "La Verrue", est notre mascotte involontaire. Toujours là, mais pas toujours au bon endroit, il a un don pour se retrouver en mauvaise posture et attirer les tirs… même ceux de ses coéquipiers ! Bien qu’il soit, disons… le maillon faible de l’équipe, Sa maladresse légendaire est même devenue une sorte de "tactique" : parfois, son imprévisibilité désoriente suffisamment l’équipe adverse pour que nous en tirions parti !</p>
             
-            <h2>Christophe "Le Bof"</h2>
-            <p>Christophe, alias "cricri" est reconnaissable à des kilomètres avec son attitude relax clope au bec et binouse a la main. Toujours en train de parler de ses exploits (qu'on n'a jamais vraiment vu), il débarque au terrain de paintball en survêt, parfois même en claquettes, convaincu que l'équipement c'est pour les faibles. Son approche ? "Pas besoin de stratégie, juste foncer !"</p>
+            <h2>Christophe "Le Belliqueux"</h2>
+            <p>Christophe, alias "Tof" est reconnaissable à des kilomètres avec son attitude relax clope au bec et binouse a la main. Toujours en train de parler de ses exploits (qu'on n'a jamais vraiment vu), il débarque au terrain de paintball en survêt, parfois même en claquettes, convaincu que l'équipement c'est pour les faibles. Son approche ? "Pas besoin de stratégie, juste foncer !"</p>
 
             <h2>Sacha "Le Joueur Solide"</h2>
             <p>Sacha est le gars fiable de l'équipe. Pas de coups d'éclat ni de stratégies trop ambitieuses : il est là pour jouer sérieusement et faire son job. Sacha connaît bien les bases et reste concentré pendant toute la fête, sans jamais se laisser déranger par le chaos autour de lui</p>
