--- a/pages/plus.html
+++ b/pages/plus.html
@@ -72,7 +72,7 @@
 
             <h2>Ryan "L’Assassin Silencieux"</h2>
             <p>
-                Ryan  est le roi de la discrétion et de la précision. On le surnomme l’Assassin Silencieuse car il se déplace sans bruit élimine a la main et frappe avec une précision incroyable. Spécialiste des éliminations surprises, il est l’atout caché de l’équipe.
+                Ryan  est le roi de la discrétion et de la précision. On le surnomme l’Assassin Silencieux car il se déplace sans bruit élimine a la main et frappe avec une précision incroyable. Spécialiste des éliminations surprises, il est l’atout caché de l’équipe.
             </p>
 
             <h2>Florian "Le Défenseur"</h2>
