--- a/pages/lanceur.html
+++ b/pages/lanceur.html
@@ -119,7 +119,7 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Grégory</h5>
-                                    <p>Shoker AMP</p> 
+                                    <p>Shocker AMP</p> 
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -151,7 +151,7 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Ryan</h5>
-                                    <p>Shoker RSX </p>
+                                    <p>Shocker RSX </p>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -169,7 +169,7 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Florian</h5>
-                                    <p>Shoker XLS </p>
+                                    <p>Shocker XLS </p>
                                 </div>
                             </div>
                             <!-- Product actions-->
